--- a/DreamIsland/Areas/Admin/Views/_ViewImports.cshtml
+++ b/DreamIsland/Areas/Admin/Views/_ViewImports.cshtml
@@ -13,5 +13,6 @@
 @using DreamIsland.Infrastructure
 @using DreamIsland.Areas.Admin.Models.Island
 @using DreamIsland.Areas.Admin.Models.Car
+@using DreamIsland.Areas.Admin.Models.Celebrity
 @using DreamIsland.Services.Island.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
