--- a/DreamIsland/Areas/Admin/Views/_ViewImports.cshtml
+++ b/DreamIsland/Areas/Admin/Views/_ViewImports.cshtml
@@ -14,5 +14,6 @@
 @using DreamIsland.Areas.Admin.Models.Island
 @using DreamIsland.Areas.Admin.Models.Car
 @using DreamIsland.Areas.Admin.Models.Celebrity
+@using DreamIsland.Areas.Admin.Models.Collectible
 @using DreamIsland.Services.Island.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
