--- a/DreamIsland/Views/Cars/Details.cshtml
+++ b/DreamIsland/Views/Cars/Details.cshtml
@@ -8,11 +8,11 @@
     <div class="col-md-8 offset-2">
         <img class="card-img-top" src="@Model.ImageUrl" alt="@Model.Brand @Model.Model">
         <div class="card-body text-center">
-            <h5 class="card-title text-center">Bran: @Model.Brand</h5>
+            <h5 class="card-title text-center">Brand: @Model.Brand</h5>
             <p class="card-text">Model: @Model.Model</p>
             <p class="card-text">Year: @Model.Year</p>
             <button class="btn btn-primary" id="description" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            More Info
+                More Info
             </button>
             </p>
             <div class="collapse" id="collapseExample">
@@ -32,14 +32,35 @@
                             <input asp-for="HasSeatMassager" class="form-check-input" type="checkbox" disabled>
                             <label class="form-check-label" asp-for="HasSeatMassager">Seat Massager</label>
                         </div>
-                    </div>                   
+                    </div>
                 </div>
             </div>
             @if (User.IsAdmin())
             {
                 <a asp-controller="Cars" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
-                <a asp-controller="Cars" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this item?');">Delete</a>
+                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                    Delete
+                </button>
             }
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title col-12 text-center" id="exampleModalLabel">Delete confirmation</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete @(Model.Brand + " " + Model.Model)?
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <a asp-controller="Cars" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
