--- a/DreamIsland/Views/Collectibles/All.cshtml
+++ b/DreamIsland/Views/Collectibles/All.cshtml
@@ -48,7 +48,29 @@
                asp-route-currentPage="@previousPage" asp-route-searchTerm="@Model.SearchTerm"
                asp-route-rarityLevel="@Model.RarityLevel">Previous</a>
         </li>
+        @for (int i = Model.CurrentPage - 2; i < Model.CurrentPage; i++)
+        {
+            if (i > 0)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-controller="Collectibles" asp-action="All"
+                       asp-route-currentPage="@i" asp-route-searchTerm="@Model.SearchTerm"
+                       asp-route-rarityLevel="@Model.RarityLevel">@i</a>
+                </li>
+            }
+        }
         <li class="page-item active"><a class="page-link" href="#">@Model.CurrentPage</a></li>
+        @for (int i = Model.CurrentPage + 1; i <= Model.CurrentPage + 2; i++)
+        {
+            if (i <= maxPage)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-controller="Collectibles" asp-action="All"
+                       asp-route-currentPage="@i" asp-route-searchTerm="@Model.SearchTerm"
+                       asp-route-rarityLevel="@Model.RarityLevel">@i</a>
+                </li>
+            }
+        }
         <li class="page-item @(shouldBeDisabled ? "disabled" : string.Empty)">
             <a class="page-link"
                asp-controller="Collectibles" asp-action="All"
