--- a/DreamIsland/Views/Islands/All.cshtml
+++ b/DreamIsland/Views/Islands/All.cshtml
@@ -62,7 +62,29 @@
                asp-route-currentPage="@previousPage" asp-route-region="@Model.Region"
                asp-route-searchTerm="@Model.SearchTerm" asp-route-IslandSorting="@((int)Model.IslandSorting)">Previous</a>
         </li>
+        @for (int i = Model.CurrentPage - 2; i < Model.CurrentPage; i++)
+        {
+            if (i > 0)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-controller="Islands" asp-action="All"
+                       asp-route-currentPage="@i" asp-route-region="@Model.Region"
+                       asp-route-searchTerm="@Model.SearchTerm" asp-route-IslandSorting="@((int)Model.IslandSorting)">@i</a>
+                </li>
+            }
+        }
         <li class="page-item active"><a class="page-link" href="#">@Model.CurrentPage</a></li>
+        @for (int i = Model.CurrentPage + 1; i <= Model.CurrentPage + 2; i++)
+        {
+            if (i <= maxPage)
+            {
+                <li class="page-item">
+                    <a class="page-link" asp-controller="Islands" asp-action="All"
+                       asp-route-currentPage="@i" asp-route-region="@Model.Region"
+                       asp-route-searchTerm="@Model.SearchTerm" asp-route-IslandSorting="@((int)Model.IslandSorting)">@i</a>
+                </li>
+            }
+        }
         <li class="page-item  @(shouldButtonBeDisabled ? "disabled" : string.Empty)">
             <a class="page-link"
                asp-controller="Islands" asp-action="All"
