--- a/DreamIsland/Views/Cars/_CarsPartial.cshtml
+++ b/DreamIsland/Views/Cars/_CarsPartial.cshtml
@@ -3,10 +3,10 @@
 <div class="row">
     @foreach (var car in Model)
     {
-        var photoPath = "/cars/cover/" + (car.ImageUrl ?? "noimage.jpg");
+        var photoPath = "/resized/cars/" + (car.ImageUrl ?? "noimage.jpg");
         <div class="col-md-4">
             <div class="card mb-3">
-                <img class="card-img-top" src=@photoPath alt=@car.Brand height="400">
+                <img class="card-img-top" src=@photoPath alt=@car.Brand>
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@(car.Brand + " " + car.Model)</h5>
                     <p>@car.Year</p>
