--- a/DreamIsland/Views/Contact/Book.cshtml
+++ b/DreamIsland/Views/Contact/Book.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="contact-form">
         <h1 class="title text-center">Contact Us</h1>
-        <h2 class="subtitle text-center">We are here assist you.</h2>
+        <h2 class="subtitle text-center">We are here to assist you.</h2>
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
