--- a/DreamIsland/Views/Home/Index.cshtml
+++ b/DreamIsland/Views/Home/Index.cshtml
@@ -128,18 +128,60 @@ else
     </div>
 </div>
 
-@section Scripts{
-    <script>
-        $('#statistics-button').on('click', ev => {
-            $.get('/api/statistics', (data) => {
-                $('#total-islands').text(data.totalIslands + " Islands");
-                $('#total-cars').text(data.totalCars + " Cars");
-                $('#total-celebrities').text(data.totalCelebrities + " Celebrities");
-                $('#total-collectibles').text(data.totalCollectibles + " Collectibles");
+</p>
 
-                $('#statistics').removeClass('d-none');
-                $('#statistics-button').hide();
+<div class="row">
+    <div class="col-12 text-center">
+        <button class="btn btn-primary" id="find-me">Show my location</button><br />
+        <p id="status"></p>
+        <a id="map-link" target="_blank"></a>
+    </div>
+</div>
+
+@section Scripts{
+<script>
+            $('#statistics-button').on('click', ev => {
+                $.get('/api/statistics', (data) => {
+                    $('#total-islands').text(data.totalIslands + " Islands");
+                    $('#total-cars').text(data.totalCars + " Cars");
+                    $('#total-celebrities').text(data.totalCelebrities + " Celebrities");
+                    $('#total-collectibles').text(data.totalCollectibles + " Collectibles");
+
+                    $('#statistics').removeClass('d-none');
+                    $('#statistics-button').hide();
+                });
             });
-        });
-    </script>
+
+      function geoFindMe() {
+
+      const status = document.querySelector('#status');
+      const mapLink = document.querySelector('#map-link');
+
+      mapLink.href = '';
+      mapLink.textContent = '';
+
+      function success(position) {
+        const latitude  = position.coords.latitude;
+        const longitude = position.coords.longitude;
+
+        status.textContent = '';
+        mapLink.href = `https://www.openstreetmap.org/#map=18/${latitude}/${longitude}`;
+        mapLink.textContent = `Latitude: ${latitude} °, Longitude: ${longitude} °`;
+      }
+
+      function error() {
+        status.textContent = 'Unable to retrieve your location';
+      }
+
+      if(!navigator.geolocation) {
+        status.textContent = 'Geolocation is not supported by your browser';
+      } else {
+        status.textContent = 'Locating…';
+        navigator.geolocation.getCurrentPosition(success, error);
+      }
+
+    }
+
+    document.querySelector('#find-me').addEventListener('click', geoFindMe);
+</script>
 }
